加入导出文件功能

--- a/LuckyDraw/LuckyDraw/Views/Home/Index.cshtml
+++ b/LuckyDraw/LuckyDraw/Views/Home/Index.cshtml
@@ -79,6 +79,7 @@
         <button onclick="luckyDraw()">发布抽奖</button>
         <br />
         <button onclick="getAwardInfo()">获取抽奖结果</button>
+        <a href="/uploadFile/getFile">导出获奖表</a>
         <div id="table"></div>
     </div>
 </body>
