--- a/LuckyDraw/LuckyDraw/Views/UploadFile/upload.cshtml
+++ b/LuckyDraw/LuckyDraw/Views/UploadFile/upload.cshtml
@@ -15,6 +15,34 @@
             file = currentFile[0];
             var data = new FormData();
             data.append("file", file);
+            data.append("choice", "1");
+            $.ajax({
+                type: "post",
+                url: "/uploadFile/upload",
+                data: data,
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (data) {
+                    console.log(data);
+                    if (data["status"] == "success") {
+                        alert("上传文件成功");
+                    }
+                    else {
+                        alert("上传文件失败");
+                    }
+                },
+                fail: function () {
+                    console.log("function fail");
+                }
+            });
+        }
+        function upload2() {
+            var currentFile = document.getElementById("file2").files;
+            file = currentFile[0];
+            var data = new FormData();
+            data.append("file", file);
+            data.append("choice", "2");
             $.ajax({
                 type: "post",
                 url: "/uploadFile/upload",
@@ -40,7 +68,8 @@
 </head>
 <body>
     <div> 
-        <input type="file" id="file" onchange="upload()" />
+        上传文件1<input type="file" id="file" onchange="upload()" />
+        上传文件2<input type="file" id="file2" onchange="upload2()" />
     </div>
 </body>
 </html>
